# opentelemetry-distro-python

./: .gitignore  A365_DOCUMENTATION.md  CHANGELOG.md  DESIGN_PROPOSAL_SEPARATE_PROVIDERS.md  MIGRATION_A365.md  README.md  pyproject.toml  tox.ini
docs/: MIGRATION_A365.md  conf.py
samples/a365/: exporter.py
samples/a365/getting_started/: README.md  env.TEMPLATE  pyproject.toml  requirements.txt  run_scopes_test.py
samples/a365/getting_started/src/: agent.py  main.py  start_server.py
samples/a365/getting_started/src/services/: __init__.py  openai_service.py  tool_service.py
samples/a365/getting_started/src/utils/: __init__.py  azure_openai_client.py  observability_helpers.py  token_cache.py
samples/langchain/: validate_traces.py
src/microsoft/opentelemetry/: _a365_utils.py  _constants.py  _distro.py  _version.py
src/microsoft/opentelemetry/_genai/_openai_agents/: _constants.py  _message_mapper.py  _trace_instrumentor.py  _trace_processor.py  _utils.py
src/microsoft/opentelemetry/a365/: README.md
tests/: test_distro.py  test_openai_agents_integration.py  test_sdkstats.py  test_semantic_kernel_integration.py
tests/a365/: test_span_processor.py
tests/agent_framework/: test_trace_instrumentor.py
tests/genai/main_agent/: test_span_processor.py
tests/openai_agents/: test_message_mapper.py  test_trace_instrumentor.py  test_trace_processor.py  test_utils.py
tests/openai_agents/integration/: conftest.py  test_openai_agents_trace_processor.py
tests/semantic_kernel/: test_trace_instrumentor.py
